--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,8 +63,10 @@ ELSE()
   ADD_DEFINITIONS(-D_FILE_OFFSET_BITS=64)
   SET(CMAKE_C_FLAGS    ${CMAKE_C_FLAGS}   "-fPIC")
   SET(CMAKE_CXX_FLAGS  ${CMAKE_CXX_FLAGS} "-fPIC -std=gnu++0x")
+  FIND_PACKAGE(NumPy REQUIRED)
   INCLUDE_DIRECTORIES("/usr/local/include")
   INCLUDE_DIRECTORIES("/usr/include")
+  INCLUDE_DIRECTORIES(${NUMPY_INCLUDE_DIRS})
 
 ENDIF()
 
